--- a/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">GrapefruitVideoPlayer</string>
     <string name="settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
