--- a/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GrapefruitVideoPlayer</string>
     <string name="settings">Settings</string>
+    <string name="main_act_label">Available Video</string>
+    <string name="app_name_alias">G Player</string>
 </resources>
