--- a/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="settings">Settings</string>
     <string name="main_act_label">Available Video</string>
     <string name="app_name_alias">G Player</string>
+    <string name="select">Select As Thumbnail</string>
 </resources>
