This huge commit has done following:- 	1. Changes package structure. 	2. Removes ExoPlayer library and related xml and java class. 	3. Plays video using surface view and media player object. 	4. Reconfigures fast forward, fast rewind, play-pause button and seekbar. 	5. Adds alert dialog to change fast forwarding and rewinding time. 	6. Caches users selection to fast forwarding and rewinding time.

--- a/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="main_act_label">Available Video</string>
     <string name="app_name_alias">G Player</string>
     <string name="select">Select As Thumbnail</string>
+    <string name="dialog_title">Seek by</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="seek_time_id">SELECTED_SEEK_TIME_ID</string>
 </resources>
