Does the following changes:- 	1. Initialize 'SharedDataSource' with video list. 	2. Passes only index clicked by user to the 'VideoPlayerActivity'. 	3. Retains only 'listIndex' param on 'VideoItemClickListener' method. 	4. Makes use of 'SharedDataSource' in adapter and video player 	activity

--- a/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="seek_time_id">SELECTED_SEEK_TIME_ID</string>
+    <string name="list_index">LIST_INDEX</string>
 </resources>
